--- a/src/main/resources/templates/approval.mustache
+++ b/src/main/resources/templates/approval.mustache
@@ -1,15 +1,26 @@
-<!doctype html>
-<html lang="kor">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Approval</title>
-</head>
-<body>
+{{!layer/header}}
 <h1>Approval</h1>
+<textarea id="content"></textarea>
+<button id="btn">버튼</button>
 {{{docs}}}
-</body>
+<script>
+    let textareaBtn = document.getElementById("btn");
+
+    textareaBtn.addEventListener("click", function (e) {
+        let data = document.getElementById("content").value;
+        fetchingData(data);
+    });
+
+    function fetchingData(data) {
+        fetch("/api/document", {
+            method: "POST",
+            headers: {
+               "Content-Type": "application/json"
+            },
+            body: data,
+        })
+        .then(response => console.log(response));
+    }
+</script>
 <script src="{{js}}"></script>
-</html>
+{{!layer/footer}}
